# ftk

./: .gitignore  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  autogen.sh  compile  config.status  config_ftk.h  config_ftk.h.in  configure  configure.ac  configure.in  fedora.sh  ftk.cnf  ftk.cnf.in  ftk.pc  ftk.pc.in  libtool  stamp-h1
apps/calculator/: Makefile  Makefile.am  Makefile.in  main.c
apps/designer/: Makefile.am  Makefile.in  TODO  code_gen.c  code_gen.h  ftk_app_designer.c  ftk_app_designer.h  main.c  open.c  open.h  save.c  save.h  select_file.c  select_file.h  widget_editor.c  widget_editor.h  widgets_info.c  widgets_info.h
apps/desktop/: Makefile  Makefile.am  Makefile.in  app_info.c  app_info.h  ftk_app_lua.c  ftk_app_lua.h  ftk_tester.c  ftk_tester.h  main.c  vnc_service.c  vnc_service.h
apps/filemanager/: Makefile  Makefile.am  Makefile.in  ftk_app_file_browser.c  ftk_app_file_browser.h  main.c
apps/shell/: Makefile  Makefile.am  Makefile.in  ftk_app_shell.c  ftk_app_shell.h  ftk_source_shell.c  ftk_source_shell.h  main.c
data/: Makefile  Makefile.am  Makefile.in  gb2312.fnt
docs/: FAQ.txt  Makefile  Makefile.am  Makefile.in  Release-0.2.txt  Release-0.3.txt  Release-0.4.txt  Release-0.5.txt  Release-0.6.txt  Run-FTK-On-Android-Emulator.txt  autotest.txt  build.txt  cmd_options.txt  config.txt  specail_key.txt  theme.txt  tslib.txt  xul.txt
docs/reference/: Makefile  Makefile.am  Makefile.in  ftk-docs.sgml  ftk-sections.txt
fbus/: Makefile  Makefile.am  Makefile.in  README  fbus_parcel.c  fbus_parcel.h  fbus_proxy.c  fbus_proxy.h  fbus_service.c  fbus_service.h  fbus_service_infos.c  fbus_service_infos.h  fbus_service_manager.c  fbus_service_manager.h  fbus_service_manager_common.h  fbus_service_manager_daemon.c  fbus_source_listen.c  fbus_source_listen.h  fbus_source_proxy.c  fbus_source_proxy.h  fbus_source_service.c  fbus_source_service.h  fbus_stream.c  fbus_stream.h  fbus_stream_socket.c  fbus_stream_socket.h  fbus_typedef.h  service_manager_test.c
fbus/.deps/: fbus_parcel.Plo  fbus_proxy.Plo  fbus_service.Plo  fbus_service_infos.Plo  fbus_service_manager.Plo  fbus_service_manager_daemon.Po  fbus_source_listen.Plo  fbus_source_proxy.Plo  fbus_source_service.Plo  fbus_stream.Plo  fbus_stream_socket.Plo  parcel_test-fbus_parcel.Po  service_infos_test-fbus_service_infos.Po  service_manager_test.Po
fbus/demo/: Makefile  Makefile.am  Makefile.in  echo.service  echo.service.in  echo_test.c  fbus_echo.c  fbus_echo.h  fbus_echo_common.h  fbus_service_echo.c
opengles/redbook/: Makefile  Makefile.am  Makefile.in  aargb.c  alpha.c  alpha3D.c  checker.c  colormat.c  cube.c  double.c  fog.c  hello.c  light.c  lines.c  material.c  mipmap.c  model.c  movelight.c  opengles_demos.desktop  planet.c  polyoff.c  robot.c  scene.c  smooth.c  stencil.c  stroke.c  texbind.c  texsub.c  torus.c  varray.c  wrap.c
opengles/src/: Arrays.h  Buffer.h  Color.h  Config.cpp  Config.h  Context.cpp  Context.h  ContextBuffer.cpp  ContextFloat.cpp  ContextLight.cpp  ContextLines.cpp  ContextMaterial.cpp  ContextMatrix.cpp  ContextMesh.cpp  ContextPoints.cpp  ContextRaster.cpp  ContextRender.cpp  ContextTexture.cpp  ContextTriangles.cpp  ContextViewport.cpp  Display.cpp  Display.h  FractionalColor.h  Light.cpp  Light.h  LineClipper.inc  Makefile  Makefile.am  Makefile.in  Material.cpp  Material.h  MatrixStack.cpp  MatrixStack.h  OGLES.h  Rasterizer.cpp  Rasterizer.h  RasterizerState.cpp  RasterizerState.h  RasterizerTriangles.cpp  RasterizerTriangles.inc  (+13 more)
script_binding/lua/: Makefile  Makefile.am  Makefile.in  demo1.lua  demo2.lua  demo3.lua  demo4.lua  demo_button.lua  demo_check_button.lua  demo_combo_box.lua  demo_dialog.lua  demo_entry.lua  demo_file_browser.lua  demo_fullscreen.lua  demo_icon_view.lua  demo_label.lua  demo_list_view.lua  demo_menu.lua  demo_msgbox.lua  demo_popup.lua  demo_progressbar.lua  demo_scrollbar.lua  demo_text_view.lua  demo_wait_box.lua  ftk_dir.h  ftk_file.h  ftk_fs.h  ftk_lua.c  ftk_lua.h  lua_ftk.c  lua_ftk.h  lua_ftk_app_window.c  lua_ftk_app_window.h  lua_ftk_bitmap.c  lua_ftk_bitmap.h  lua_ftk_bitmap_factory.c  lua_ftk_bitmap_factory.h  lua_ftk_button.c  lua_ftk_button.h  lua_ftk_callbacks.c  (+96 more)
services/fconf/: Makefile  Makefile.am  Makefile.in  README  fconf.c  fconf.h  fconf.idl  fconf.service  fconf.service.in  fconf_client.c  fconf_client.h  fconf_service.c  fconf_service.h  fconf_share.h  fconf_test.c  fconf_xml.c  fconf_xml.h  gen.sh  service.c
src/: Makefile  Makefile.am  Makefile.in  adb-push.sh  ftk.c  ftk.h  ftk_allocator.c  ftk_allocator.h  ftk_allocator_default.c  ftk_allocator_default.h  ftk_allocator_profile.c  ftk_allocator_profile.h  ftk_animation.c  ftk_animation.h  ftk_animation_alpha.c  ftk_animation_alpha.h  ftk_animation_expand.c  ftk_animation_expand.h  ftk_animation_scale.c  ftk_animation_scale.h  ftk_animation_translate.c  ftk_animation_translate.h  ftk_animation_trigger.h  ftk_animation_trigger_default.c  ftk_animation_trigger_default.h  ftk_animation_trigger_silence.c  ftk_animation_trigger_silence.h  ftk_app_window.c  ftk_app_window.h  ftk_backend.h  ftk_bitmap.c  ftk_bitmap.h  ftk_bitmap_factory.h  ftk_button.c  ftk_button.h  ftk_cairo.c  ftk_cairo.h  ftk_canvas.c  ftk_canvas.h  ftk_check_button.c  (+157 more)
src/.deps/: dictbuilder.Plo  dictlist.Plo  dicttrie.Plo  ftk_input_method_gpinyin.Plo  libftk_la-fontdata.Plo  libftk_la-ftk.Plo  libftk_la-ftk_allocator.Plo  libftk_la-ftk_allocator_default.Plo  libftk_la-ftk_allocator_profile.Plo  libftk_la-ftk_animation.Plo  libftk_la-ftk_animation_alpha.Plo  libftk_la-ftk_animation_expand.Plo  libftk_la-ftk_animation_scale.Plo  libftk_la-ftk_animation_translate.Plo  libftk_la-ftk_animation_trigger_default.Plo  libftk_la-ftk_animation_trigger_silence.Plo  libftk_la-ftk_app_window.Plo  libftk_la-ftk_backend_fb.Plo  libftk_la-ftk_backend_x11.Plo  libftk_la-ftk_bitmap.Plo  libftk_la-ftk_bitmap_default.Plo  libftk_la-ftk_bitmap_factory.Plo  libftk_la-ftk_button.Plo  libftk_la-ftk_canvas.Plo  (+100 more)
testdata/: Makefile  Makefile.am  Makefile.in
(+1013 files in other folders)
