SUBDIRS=reference
EXTRA_DIST=autotest.txt     config.txt  Release-0.2.txt  Release-0.5.txt   \
	specail_key.txt  WindowAnimations.pdf build.txt        FAQ.txt     \
	Release-0.3.txt  Release-0.6.txt                  theme.txt        xul.txt Applications.pdf \
	cmd_options.txt  intro.pdf   Release-0.4.txt  Run-FTK-On-Android-Emulator.txt  tslib.txt
