EXTRA_DIST=\
	Acrobat.png     Delicious.png  iTunes.png     VLC.png\
	AIM.png         earth.png      LastFm.png     png3.png      Weather.png\
	alarm.png       Facebook.png   Linkedin.png   RSS.png       WLM.png\
	Calculator.png  Flickr.png     Mail.png       Safari.png    Wordpress.png\
	Calender.png    Games.png      Maps.png       search.png    Yahoo.png\
	Call.png        Google.png     marshrute.png  Settings.png  Youtube.png\
	Camera.png      Install.png    Memory.png     Skype.png     zone.png\
	Chat.png        iPod.png       Notes.png      Sms.png\
	Clock.png       IP.png         Photos.png     Stock.png\
	Customize.png   iradio.png     Twitter.png\
	jpeg1.jpg       t1.bmp  t24.bmp  t4.bmp  t8.bmp png_RGB_tRNS.png

testdatadir=$(datadir)/ftk/testdata
testdata_DATA=$(EXTRA_DIST)
